feat: added SEO and Meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fast Learnes</title>
+    <meta name=”descripcion” content= "FastLearners es una aplicación web que te permitirá aprender más sobre el mundo del desarrollo de software con expertos en el campo ¡Regístrate ya!"/>
+    <meta name= “autor” content=“FastLearners”>
+    <meta name="copyright" content="Copyright FastLearners Group" />
+    <meta name="keywords" content="learning, software, software development, forum, video, repository, programming, programming languages, engineering"/>
+    <meta name= “robots” content=“index,follow”>
+    <title> FastLearners ¡Aprende a codear con nosotros! </title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
